close major topic divs if not first topic

--- a/output.html
+++ b/output.html
@@ -175,6 +175,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>New marchers are any students who are in their first year with the marching band.  This could include any student in any grade who is new to band. Often these students are freshman at LHS, but 8th graders zoned to attend LHS are also eligible to join the band. Generally previous year 8th grade marchers join their classmates at new marcher events their freshman year.</p>
 </div>
 </div>
+</div></div>
 <!--Topic 2-->
 <input id="2" class="toggle" type="checkbox">
   <label for="2" class="lbl-toggle lbl-toggle-bold">Calendar and Schedule Info</label>
@@ -223,6 +224,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>Occasionally during practice and warm-ups the band may move inside the building to practice if it is raining, but we DO march (and certainly compete!) in the rain.  On competition days, the uniform crew will provide ponchos for the kids.  While the band staff and volunteers do everything possible to protect instruments, please be advised that your instrument may get wet, and will suffer bumps and bruises during marching season.  Typically, if you own a nicer instrument, such as a wood clarinet, you should also have a plastic instrument for marching season.</p>
 </div>
 </div>
+</div></div>
 <!--Topic 3-->
 <input id="3" class="toggle" type="checkbox">
   <label for="3" class="lbl-toggle lbl-toggle-bold">Rehearsals/Band Camp</label>
@@ -327,6 +329,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>Fall band camp happens during fall break, usually on Wednesday, Thursday, and Friday of break. Students rehearse from morning until the evening. Students typically focus on learning drill (the marching patterns and body movements) for the third movement and cleaning up the entire show. </p>
 </div>
 </div>
+</div></div>
 <!--Topic 4-->
 <input id="4" class="toggle" type="checkbox">
   <label for="4" class="lbl-toggle lbl-toggle-bold">Band Performances/Competitions</label>
@@ -445,6 +448,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>Lafayette Band Association rents box trucks to transport props, sets, and large instruments to and from competitions. The field crew handles the loading and unloading, and the field crew consists of all parents volunteers. Smaller instruments, such as flutes and clarinets, are kept with students on the bus.</p>
 </div>
 </div>
+</div></div>
 <!--Topic 5-->
 <input id="5" class="toggle" type="checkbox">
   <label for="5" class="lbl-toggle lbl-toggle-bold">Getting Connected</label>
@@ -500,6 +504,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>The eNews is the mass email that is sent to parents and students every Sunday. The eNews includes important dates happening that week, fundraiser information, and announcement. Send your email to lafayetteband.enews@gmail.com to sign up for the weekly email. </p>
 </div>
 </div>
+</div></div>
 <!--Topic 6-->
 <input id="6" class="toggle" type="checkbox">
   <label for="6" class="lbl-toggle lbl-toggle-bold">Uniforms (Marching and Concert)</label>
@@ -569,6 +574,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>Students wear the dri-fit band shirt they received at band camp and black shorts. Depending on the weather, students are permitted to wear long sleeve dri-fits and pants under uniforms as it gets colder in the season. </p>
 </div>
 </div>
+</div></div>
 <!--Topic 7-->
 <input id="7" class="toggle" type="checkbox">
   <label for="7" class="lbl-toggle lbl-toggle-bold">Finances/Fundraising/LBA</label>
@@ -596,6 +602,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>To cover all band activities, including marching and concert season, the LBA provides >$2200 per student. Broken down roughly this includes >$600 in travel costs, >$400 for paid staff, >$300 for show related expenses, >$220 for uniforms, >$100 for food, plus a host of other expenses.  This can vary slightly from year to year based on travel costs etc.</p>
 </div>
 </div>
+</div></div>
 <!--Topic 8-->
 <input id="8" class="toggle" type="checkbox">
   <label for="8" class="lbl-toggle lbl-toggle-bold">How much does the band spend on uniforms, a whole band day trip, a whole band overnight trip, food to feed the whole band, show music, props/sets</label>
@@ -651,6 +658,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>While you cannot earn credit toward your Family Contribution, we recognize that every family is in a different situation. The band has myriad volunteer needs above and beyond the family contribution, and all band families are expected to share the burden, enabling all our students to have a positive and life-changing band experience! From time-to-time the band does have need of in-kind contributions. If you might be able to support the band in this way, please contact the volunteer crew chief best aligned with your resources!</p>
 </div>
 </div>
+</div></div>
 <!--Topic 9-->
 <input id="9" class="toggle" type="checkbox">
   <label for="9" class="lbl-toggle lbl-toggle-bold">Food</label>
@@ -678,6 +686,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>WATER IS MOST IMPORTANT FOR REHEARSALS! Have your child bring their own jug.  Chaperones will have coolers full of ice and water available.  Chaperones also have emergency snacks if a child has low blood sugar or is feeling sick.  Food and water are provided during competitions.</p>
 </div>
 </div>
+</div></div>
 <!--Topic 10-->
 <input id="10" class="toggle" type="checkbox">
   <label for="10" class="lbl-toggle lbl-toggle-bold">Color Guard</label>
@@ -726,6 +735,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>The difference between each "weapon" is as follows. The sabre is a composite sabre with a hilt on one end. Think of a long pirate sword. the sabres are NOT sharp. The rifles are wood or composite material that are twirled or tossed. The rifles do NOT shoot bullets. The flags are silk prints attatched to a flag pole of various or uniformed sizes. They can also be tossed or twirled.</p>
 </div>
 </div>
+</div></div>
 <!--Topic 11-->
 <input id="11" class="toggle" type="checkbox">
   <label for="11" class="lbl-toggle lbl-toggle-bold">Showing your "Pride of the Bluegrass" Spirit</label>
@@ -781,6 +791,7 @@ Every student who enrolls in band class (Jazz band class) is guaranteed placemen
 <p>Spell out Lafayette, and say Lafayette at the end. Sounds like: L-A-F-A-Y-E-T-T-E Lafayette! </p>
 </div>
 </div>
+</div></div>
 <!--Topic 12-->
 <input id="12" class="toggle" type="checkbox">
   <label for="12" class="lbl-toggle lbl-toggle-bold">Other?</label>
