Added paragraphs, full draft

--- a/faq-051823.html
+++ b/faq-051823.html
@@ -74,7 +74,7 @@
         
         <p>Regardless, we are thrilled you are here--we're a family, and we're committed to welcoming you and your student, and supporting you! TOGETHER is how we offer positive experiences to all our students!</p>
         
-        <p style="text-align:center"><a href="https://www.lafayetteband.org/" class="button">Return to Lafayette Band homepage!</a></p>
+        <p style="text-align:center"><a href="index.html" class="button">Return to Lafayette Band homepage!</a></p>
     </div>
 
     <div class="container">
